# prophet-mesh

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
agents/: analytics-agent.yaml  coding-agent.yaml  creative-agent.yaml  governance-sentinel.yaml  memory-steward.yaml  michael-agent.yaml  operations-agent.yaml  research-agent.yaml  writing-agent.yaml
blueprints/: michael-agent.yaml  premium-custom-agent.yaml
docs/: private-preview-ledger.md  private-preview-spine.md
examples/: choir-execution-plan.accepted.json  choir-execution-plan.rejected.json  conductor-response.accepted.json  conductor-response.rejected.json  customer-intake.accepted.json  customer-intake.rejected.json  evaluation-report.accepted.json  evaluation-report.rejected.json  execution-trace.accepted.json  execution-trace.rejected.json  router-decision.accepted.json  router-decision.rejected.json  router-request.email.json  runtime-release-bundle.accepted.json  runtime-release-bundle.rejected.json
specs/: agent-choir.yaml  ai-driven-development.yaml  customer-intake.schema.json  estate-knowledge-graph.yaml  evaluation-report.schema.json  memory-scope.yaml  model-router-interface.yaml  model-task-policy.yaml  personal-knowledge-graph.yaml  repo-state.yaml  runtime-release-bundle.yaml
tests/: test_autonomy.py  test_blueprint_contract.py  test_choir_contract.py  test_choir_plan_contract.py  test_conductor_response_contract.py  test_customer_intake.py  test_estate_graph.py  test_execution_trace_contract.py  test_lifecycle.py  test_memory_scope.py  test_pkg.py  (+13 more)
(+45 files in other folders)
